Fix donations arrow overflow bug

--- a/src/pages/Donations.css
+++ b/src/pages/Donations.css
@@ -88,11 +88,11 @@ h3 {
   }
 
   .left-arrow {
-    transform: translateX(-95%);
+    transform: translateX(-89%);
   }
   
   .right-arrow {
-    transform: translateX(95%);
+    transform: translateX(89%);
   }
 
   .mobile-section {
